K8s/flask-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /
  
spec:
  ingressClassName: nginx
  rules:
  - host: flask.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flask-service
            port: 
              number: 80
